--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "mongoose": "^6.5.1",
     "path": "^0.12.7",
     "pg": "^8.7.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
   }
 }
