--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "jquery": "^3.6.0",
+    "localStorage": "^1.0.4",
     "method-override": "^3.0.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "path": "^0.12.7",
     "pg": "^8.7.3",
-    "pug": "^3.0.2",
-    "dotenv": "^16.0.1"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
